--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,27 @@
   color: #61dafb;
 }
 
+/* Width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 100%;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(40, 40, 40);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(37, 37, 37);
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
