--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,31 +1,96 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&display=swap");
 
+ul {
+    list-style: none;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+}
+
 nav.navbar {
     position: sticky;
     top: 0px;
     z-index: 1;
 }
 
-a.navbar-brand {
+.label {
+    cursor: pointer;
+    background: rgb(0, 0, 0);
+    padding: 0.8rem 1rem;
+    width: 13%;
+    display: block;
+    box-sizing: border-box;
+    transition: all 0.3s;
+    /* Integrated a.navbar-brand code */
     font-family: 'Bebas Neue';
-    font-size: 32px;
+    font-size: 14px;
     color: #ffffff;
     text-decoration: none !important;
+}
+
+.items a {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    transition: all 0.2s;
+}
+
+.items a:hover {
+    /* border-left: 5px solid; */
+    background: rgb(37, 37, 37);
+}
+
+.items {
+    background: rgb(0, 0, 0);
+    opacity: 0;
+    visibility: hidden;
+    min-width: 13%;
+    height: 0;
+    position: absolute;
+    top: 48px;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: transform 0.3s;
+}
+
+.items::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background: rgb(0, 0, 0);
+    transform: rotate(45deg);
+    top: -7px;
+    left: 20px;
+    z-index: -1;
+}
+
+nav.navbar:hover > .items {
+    opacity: 1;
+    visibility: visible;
+    height: unset;
+    transform: scaleY(1);
+}
+
+nav.navbar:hover > .label {
+    background: rgb(40, 40, 40);
 }
 
 a.nav-link {
     font-family: 'Bebas Neue';
-    font-size: 32px;
+    font-size: 11px;
     color: #ffffff;
     text-decoration: none !important;
 }
 
-a.navbar-brand:hover {
-    transform: scale(1.005);
+.label:hover {
+    /* transform: scale(1.0015); */
     color: #ffffff;
 }
 
 a.nav-link:hover {
-    transform: scale(1.005);
+    /* transform: scale(1.015); */
     color: #ffffff;
 }
