Adding opacity to navbar and enlarging font.

--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -11,6 +11,7 @@ nav.navbar {
     position: sticky;
     top: 0px;
     z-index: 1;
+    opacity: 93%;
 }
 
 .label {
@@ -23,7 +24,7 @@ nav.navbar {
     transition: all 0.3s;
     /* Integrated a.navbar-brand code */
     font-family: 'Bebas Neue';
-    font-size: 15px;
+    font-size: 17px;
     color: #ffffff;
     text-decoration: none !important;
 }
@@ -80,7 +81,7 @@ nav.navbar:hover > .label {
 
 a.nav-link {
     font-family: 'Bebas Neue';
-    font-size: 13px;
+    font-size: 15px;
     color: #ffffff;
     text-decoration: none !important;
 }
