--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,23 @@ html {
   height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 100%;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(40, 40, 40);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(37, 37, 37);
+}
+
 div.container {
   display: flex;
   flex-direction: row;
