--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #000000 !important;
   background-image: url(.././src/assets/img/tunnel.gif) !important;
-  background-size: cover;
+  background-size: cover !important;
   background-attachment: fixed !important;
-  background-repeat: repeat;
-  background-position: center;
+  background-repeat: repeat !important;
+  background-position: center !important;
+  /* background-blend-mode: darken !important; */
   display: block !important;
   width: 100%;
   height: 100%;
@@ -89,7 +90,7 @@ p.statement {
   margin-left: 65px;
   margin-right: 65px;
   display: block !important;
-  opacity: 93% !important;
+  opacity: 83% !important;
   animation: fadeIn 10s !important;
   color: white;
 }
@@ -138,12 +139,13 @@ nav.navbar {
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
-  text-decoration: none;
+  text-decoration: none !important;
   transition: all 0.2s;
 }
 
 .items a:hover {
   background: rgb(37, 37, 37);
+  margin-left: -32px;
 }
 
 .items {
@@ -157,11 +159,16 @@ nav.navbar {
   transform-origin: top;
   transform: scaleY(0);
   transition: transform 0.3s;
+  font-family: 'Bebas Neue';
+  font-size: 15px;
+  color: #ffffff;
+  text-decoration: none !important;
 }
 
 .items::before {
   content: "";
   position: absolute;
+  text-align: left;
   width: 15px;
   height: 15px;
   background: rgb(0, 0, 0);
@@ -182,18 +189,7 @@ nav.navbar:hover > .label {
   background: rgb(40, 40, 40);
 }
 
-a.nav-link {
-  font-family: 'Bebas Neue';
-  font-size: 15px;
-  color: #ffffff;
-  text-decoration: none !important;
-}
-
 .label:hover {
-  color: #ffffff;
-}
-
-a.nav-link:hover {
   color: #ffffff;
 }
   
