--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,10 @@ body {
   background-attachment: fixed !important;
   background-repeat: repeat !important;
   background-position: center !important;
-  /* background-blend-mode: darken !important; */
   display: block !important;
   width: 100%;
   height: 100%;
-  position: relative; 
+  position: absolute !important; 
   padding-bottom:[footer-height];
   overflow: scroll;
 }
