--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   display: block !important;
   width: 100%;
   height: 100%;
-  position: absolute !important; 
+  position: relative; 
   padding-bottom:[footer-height];
   overflow: scroll;
 }
@@ -37,6 +37,9 @@ code {
 }
 
 html {
+  position: relative;
+  min-width: 1024px;
+  min-height: 768px;
   height: 100%;
 }
 
