--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&display=swap");
 
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,8 +19,10 @@ body {
   background-repeat: repeat !important;
   background-position: center !important;
   display: block !important;
+  margin: 0px;
+  min-height: 100%;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   position: relative; 
   padding-bottom:[footer-height];
   overflow: scroll;
@@ -34,13 +41,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-html {
-  position: relative;
-  min-width: 1024px;
-  min-height: 768px;
-  height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -380,19 +380,6 @@ template {
 *::before,
 *::after {
   box-sizing: border-box;
-}
-  
-html, body {
-	width: 100%;
-	height: 100%;
-}
-  
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 16px;
-  color: #1a1a1a;
 }
   
 ul,
