--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,17 @@ p.statement {
   margin-left: 65px;
   margin-right: 65px;
   display: block !important;
-  opacity: 93% !important;
+  opacity: 78% !important;
   color: white;
+  text-shadow:
+    0 0 4px rgb(255, 255, 255),
+    0 0 11px rgb(255, 255, 255),
+    0 0 19px rgb(255, 255, 255),
+    0 0 40px rgb(233, 233, 233),
+    0 0 80px rgb(200, 200, 200),
+    0 0 90px rgb(166, 166, 166),
+    0 0 100px rgb(125, 125, 125),
+    0 0 150px rgb(97, 97, 97);
   animation: fadeIn 12.25s !important;
 }
   
@@ -117,7 +126,7 @@ nav.navbar {
   top: 0px;
   z-index: 1;
   display: block !important;
-  opacity: 88% !important;
+  opacity: 78% !important;
   animation: fadeIn 4.75s !important;
 }
 
@@ -1676,6 +1685,11 @@ form [type='radio'] {
   }
 }
 
+@keyframes fadeIn {
+  0% { opacity: 0%; }
+  78% { opacity: 78%;}
+}
+
 /* @keyframes slideMe {
   0% {
     transform: skewX(0deg) translateX(1500px);
@@ -1684,8 +1698,3 @@ form [type='radio'] {
     transform: skew(0deg);
   }
 } */
-
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1;}
-}
