--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400&display=swap");
 
 html {
+  display: block !important;
   margin: auto !important;
   height: 100%;
   width: 100%;
@@ -20,12 +21,27 @@ body {
   background-position: center !important;
   display: block !important;
   margin: auto !important;
+  -webkit-transform: rotateX(0);
+  -moz-transform: rotateX(0);
+  -o-transform: rotateX(0);
+  transform: rotateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
   width: 100%;
   height: 100%;
   position: relative; 
   padding-bottom:[footer-height];
   overflow: scroll;
 }
+
+/* .gif {
+  -webkit-transform: rotateX(0);
+  -moz-transform: rotateX(0);
+  -o-transform: rotateX(0);
+  transform: rotateX(0);
+} */
 
 .badge.bg-black {
   font-family: 'Bebas Neue';
