--- a/src/index.css
+++ b/src/index.css
@@ -353,8 +353,9 @@ p.clientName {
   display: block !important;
   margin: 3px;
   margin-left: -1500px;
+  margin-right: -15px;
   text-align: right;
-  font-size: 14.5px;
+  font-size: 12px;
   -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
