--- a/src/index.css
+++ b/src/index.css
@@ -376,7 +376,7 @@ p.proficiencies {
 
 #downloadBtn {
   display: block !important;
-  margin: 3px;
+  margin-bottom: 4px;
   margin-left: -1500px;
   margin-right: -15px;
   text-align: right;
