--- a/src/index.css
+++ b/src/index.css
@@ -45,10 +45,10 @@ body {
   border-radius: 0px;
   color: white !important;
   text-decoration: none !important;
-  -webkit-animation: fadeIn 6.25s !important;
+  /* -webkit-animation: fadeIn 6.25s !important;
   -moz-animation: fadeIn 6.25s !important;
   -o-animation: fadeIn 6.25s !important;
-  animation: fadeIn 6.25s !important;
+  animation: fadeIn 6.25s !important; */
 }
 
 #portDesc {
@@ -101,22 +101,27 @@ h1.fade-one {
   -moz-animation: fadeIn 4.75s !important;
   -o-animation: fadeIn 4.75s !important;
   animation: fadeIn 4.75s !important;
+  font-size: 80px;
+  margin-top: 275px;
 }
 h1.fade-two {
   -webkit-animation: fadeIn 5.75s !important;
   -moz-animation: fadeIn 5.75s !important;
   -o-animation: fadeIn 5.75s !important;
   animation: fadeIn 5.75s !important;
+  font-size: 80px;
 }
 h1.fade-three {
   -webkit-animation: fadeIn 6.75s !important;
   -moz-animation: fadeIn 6.75s !important;
   -o-animation: fadeIn 6.75s !important;
   animation: fadeIn 6.75s !important;
+  font-size: 80px;
 }
 
 p.statement {
   font-family: 'Bebas Neue';
+  font-size: 30px;
   text-align: center;
   margin-left: 65px;
   margin-right: 65px;
@@ -132,22 +137,23 @@ p.statement {
     0 0 80px rgb(166, 166, 166),
     0 0 100px rgb(125, 125, 125),
     0 0 120px rgb(97, 97, 97);
-  -webkit-animation: fadeIn 9.5s !important;
+  /* -webkit-animation: fadeIn 9.5s !important;
   -moz-animation: fadeIn 9.5s !important;
   -o-animation: fadeIn 9.5s !important;
-  animation: fadeIn 9.5s !important;
+  animation: fadeIn 9.5s !important; */
 }
 
 #slider {
-  -webkit-animation: fadeIn 8.5s !important;
+  /* -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
-  animation: fadeIn 8.5s !important;
+  animation: fadeIn 8.5s !important; */
+  max-width: 90rem;
 }
 
 .page-title {
   font-family: 'Bebas Neue';
-  font-size: 58px;
+  font-size: 89px;
   text-align: center;
   color: white;
   text-shadow:
@@ -159,10 +165,10 @@ p.statement {
     0 0 80px rgb(166, 166, 166),
     0 0 100px rgb(125, 125, 125),
     0 0 120px rgb(97, 97, 97);
-  -webkit-animation: fadeIn 6.25s !important;
-  -moz-animation: fadeIn 6.25s !important;
-  -o-animation: fadeIn 6.25s !important;
-  animation: fadeIn 6.25s !important;
+  /* -webkit-animation: fadeIn 8.5s !important;
+  -moz-animation: fadeIn 8.5s !important;
+  -o-animation: fadeIn 8.5s !important;
+  animation: fadeIn 8.5s !important; */
   opacity: 78% !important;
 }
 
@@ -184,21 +190,23 @@ p.statement {
     0 0 60px rgb(200, 200, 200);
 }
 
-/* #fadeContacts {
+#fadeContacts {
   -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
   animation: fadeIn 8.5s !important;
-} */
+}
 
 .lean-right {
   text-align: right;
-  font-size: 16px;
+  font-size: 27px;
+  margin-bottom: 36px;
 }
 
 .lean {
-  text-align: right;
-  font-size: 13px;
+  text-align: right !important;
+  font-size: 20px;
+  margin-bottom: 36px;
 }
 
 hr {
@@ -223,10 +231,10 @@ nav.navbar {
   z-index: 1;
   display: block !important;
   opacity: 78% !important;
-  -webkit-animation: fadeIn 3.25s !important;
+  /* -webkit-animation: fadeIn 3.25s !important;
   -moz-animation: fadeIn 3.25s !important;
   -o-animation: fadeIn 3.25s !important;
-  animation: fadeIn 3.25s !important;
+  animation: fadeIn 3.25s !important; */
 }
 
 .label {
@@ -239,7 +247,7 @@ nav.navbar {
   position: absolute;
   transition: all 0.3s;
   font-family: 'Bebas Neue';
-  font-size: 17px;
+  font-size: 25px;
   color: #ffffff;
   text-decoration: none !important;
 }
@@ -270,7 +278,7 @@ nav.navbar {
   transform: scaleY(0);
   transition: transform 0.3s;
   font-family: 'Bebas Neue';
-  font-size: 15px;
+  font-size: 25px;
   color: #ffffff;
   text-decoration: none !important;
 }
@@ -316,25 +324,29 @@ a {
 }
 
 #colTitle {
-  width: 11rem;
+  width: 13rem;
   margin-top: 3.5%;
   margin-bottom: 2%;
+}
+
+#colHeader {
+  font-size: 36px;
 }
 
 #expWindow {
   overflow: auto;
   display: block !important;
-  height: 355px;
+  height: 900px;
   padding-top: 3.5%;
   padding-bottom: 3.5%;
-  -webkit-animation: fadeIn 8.5s !important;
+  /* -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
-  animation: fadeIn 8.5s !important;
+  animation: fadeIn 8.5s !important; */
 }
 
 p.clientName {
-  font-size: 18px;
+  font-size: 36px;
   margin-left: 16px;
   margin-bottom: 3px;
 }
@@ -349,23 +361,24 @@ p.clientName:hover {
 }
 
 p.proficiencies {
-  font-size: 22px;
+  font-size: 45px;
   text-align: right;
   margin-left: 16px;
   margin-bottom: 3px;
 }
 
 #posName {
-  font-size: 15px;
+  font-size: 30px;
   margin-bottom: 3px;
 }
 
 #expDate {
-  font-size: 13.5px;
+  font-size: 27px;
   margin-bottom: 3px;
 }
 
 #coName {
+  font-size: 45px;
   margin-bottom: 3px;
 }
 
@@ -379,7 +392,7 @@ p.proficiencies {
 }
 
 #desc {
-  font-size: 12px;
+  font-size: 24px;
   display: block !important;
   margin-top: 6px;
   margin-bottom: 6px;
@@ -393,12 +406,12 @@ p.proficiencies {
   margin-left: -1500px;
   margin-right: -15px;
   text-align: right;
-  font-size: 12px;
+  font-size: 30px;
   opacity: 78% !important;
-  -webkit-animation: fadeIn 8.5s !important;
+  /* -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
-  animation: fadeIn 8.5s !important;
+  animation: fadeIn 8.5s !important; */
 }
 
 #downloadBtn:hover {
@@ -422,7 +435,7 @@ p.proficiencies {
 footer {
   text-align: center;
   font-family: 'Bebas Neue';
-  font-size: 9px;
+  font-size: 13px;
   color: rgb(255, 255, 255);
   margin-top: auto;
   position: fixed;
