--- a/src/index.css
+++ b/src/index.css
@@ -102,25 +102,25 @@ h1 {
 }
 
 h1.fade-one {
-  -webkit-animation: fadeIn 4.75s !important;
+  /* -webkit-animation: fadeIn 4.75s !important;
   -moz-animation: fadeIn 4.75s !important;
   -o-animation: fadeIn 4.75s !important;
-  animation: fadeIn 4.75s !important;
+  animation: fadeIn 4.75s !important; */
   font-size: 32px;
   margin-top: 300px;
 }
 h1.fade-two {
-  -webkit-animation: fadeIn 5.75s !important;
+  /* -webkit-animation: fadeIn 5.75s !important;
   -moz-animation: fadeIn 5.75s !important;
   -o-animation: fadeIn 5.75s !important;
-  animation: fadeIn 5.75s !important;
+  animation: fadeIn 5.75s !important; */
   font-size: 32px;
 }
 h1.fade-three {
-  -webkit-animation: fadeIn 6.75s !important;
+  /* -webkit-animation: fadeIn 6.75s !important;
   -moz-animation: fadeIn 6.75s !important;
   -o-animation: fadeIn 6.75s !important;
-  animation: fadeIn 6.75s !important;
+  animation: fadeIn 6.75s !important; */
   font-size: 32px;
 }
 
@@ -195,7 +195,7 @@ p.statement {
     0 0 60px rgb(200, 200, 200);
 }
 
-#fadeContacts {
+#fadeEffect {
   -webkit-animation: fadeIn 8.5s !important;
   -moz-animation: fadeIn 8.5s !important;
   -o-animation: fadeIn 8.5s !important;
@@ -334,6 +334,12 @@ a {
   margin-bottom: 2%;
 }
 
+#referCol {
+  max-width: 14rem;
+  margin-top: 3.5%;
+  margin-bottom: 2%;
+}
+
 #colHeader {
   font-size: 36px;
 }
@@ -374,6 +380,12 @@ p.proficiencies {
 
 #posName {
   font-size: 17px;
+  margin-bottom: 3px;
+}
+
+#jobTitle {
+  font-size: 17px;
+  margin-left: 16px;
   margin-bottom: 3px;
 }
 
@@ -435,7 +447,7 @@ p.proficiencies {
   padding: 12px;
   text-align: center;
   margin-top: 35px;
-  margin-bottom: 10px;
+  margin-bottom: 45px;
   white-space: normal;
 }
 
@@ -536,12 +548,12 @@ select {
   text-transform: none;
 }
   
-button,
+/* button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
-}
+} */
 
 button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
@@ -551,12 +563,12 @@ button::-moz-focus-inner,
   padding: 0;
 }
 
-button:-moz-focusring,
+/* button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
-}
+} */
 
 fieldset {
   padding: 0.35em 0.75em 0.625em;
@@ -598,12 +610,12 @@ textarea {
   height: auto;
 }
 
-[type='search'] {
+/* [type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
-  outline-offset: -2px;
+  /* outline-offset: -2px; */
   /* 2 */
-}
+/* } */ */
 
 [type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -1353,14 +1365,14 @@ form .form-textarea {
   display: block;
 }
 
-form select {
+/* form select {
   -webkit-appearance: none;
   -moz-appearance: none;
   background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
   background-repeat: no-repeat;
   background-position-x: 98%;
   background-position-y: 50%;
-}
+} */
 
 form label,
 form .form-label {
