--- a/src/index.css
+++ b/src/index.css
@@ -548,12 +548,12 @@ select {
   text-transform: none;
 }
   
-/* button,
+button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
-} */
+}
 
 button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
@@ -563,12 +563,12 @@ button::-moz-focus-inner,
   padding: 0;
 }
 
-/* button:-moz-focusring,
+button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
-} */
+}
 
 fieldset {
   padding: 0.35em 0.75em 0.625em;
@@ -610,12 +610,12 @@ textarea {
   height: auto;
 }
 
-/* [type='search'] {
+[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
-  /* outline-offset: -2px; */
+  outline-offset: -2px;
   /* 2 */
-/* } */ */
+}
 
 [type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
