--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@ p.statement {
   font-family: 'Bebas Neue';
   font-size: 16px;
   text-align: center;
+  /* max-width: 90rem; */
   margin-left: 75px;
   margin-right: 75px;
   display: block !important;
@@ -377,6 +378,15 @@ p.proficiencies {
   text-align: right;
   margin-left: 16px;
   margin-bottom: 3px;
+}
+
+p.proficiencies:hover {
+  text-shadow:
+    0 0 4px rgb(255, 255, 255),
+    0 0 8px rgb(242, 242, 242),
+    0 0 12px rgb(237, 237, 237),
+    0 0 15px rgb(233, 233, 233),
+    0 0 19px rgb(200, 200, 200);
 }
 
 #posName {
