Adding reference and fixing column dimensions for References page.

--- a/src/index.css
+++ b/src/index.css
@@ -342,6 +342,13 @@ a {
   margin-bottom: 2%;
 }
 
+#referColWide {
+  width: 14rem;
+  display: block !important;
+  margin-top: 3.5%;
+  margin-bottom: 2%;
+}
+
 #colHeader {
   font-size: 36px;
 }
