--- a/src/index.css
+++ b/src/index.css
@@ -389,6 +389,10 @@ p.proficiencies:hover {
     0 0 19px rgb(200, 200, 200);
 }
 
+.imgSpace {
+  margin-left: 13.5px;
+}
+
 #posName {
   font-size: 17px;
   margin-bottom: 3px;
