Adding glow effect to client div on Experience page.

--- a/src/index.css
+++ b/src/index.css
@@ -361,8 +361,15 @@ a {
 p.clientSection {
   font-size: 17px;
   font-style: italic;
-  margin-left: 16px;
+  margin-left: 11px;
   margin-bottom: -9px;
+  text-shadow:
+    0 0 4px rgb(255, 255, 255),
+    0 0 11px rgb(242, 242, 242),
+    0 0 19px rgb(237, 237, 237),
+    0 0 40px rgb(233, 233, 233),
+    0 0 60px rgb(200, 200, 200);
+    display: block !important;
 }
 
 .clientsDiv {
