Committing changes to Welcome and Experience pages.

--- a/src/index.css
+++ b/src/index.css
@@ -116,13 +116,6 @@ h1.fade-two {
   animation: fadeIn 5.75s !important; */
   font-size: 32px;
 }
-h1.fade-three {
-  /* -webkit-animation: fadeIn 6.75s !important;
-  -moz-animation: fadeIn 6.75s !important;
-  -o-animation: fadeIn 6.75s !important;
-  animation: fadeIn 6.75s !important; */
-  font-size: 32px;
-}
 
 p.statement {
   font-family: 'Bebas Neue';
@@ -409,6 +402,9 @@ p.proficiencies:hover {
 
 .imgSpace {
   margin-left: 13.5px;
+}
+.imgSpaceii {
+  margin-left: 11px;
 }
 
 #posName {
